[package]
authors = ["Cheng Sun <chengsun9@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f750"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
#panic-abort = "0.3.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.stm32f7]
path = "../stm32-rs/stm32f7"
features = ["stm32f750", "rt"]
version = "*"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f750"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
