[package]
authors = ["Cheng Sun <chengsun9@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f7508-dk-julia"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"

[dependencies.stm32f7]
path = "../stm32-rs/stm32f7"
features = ["stm32f750", "rt"]
version = "*"

[[bin]]
name = "stm32f7508-dk-julia"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
