[package]
authors = ["Cheng Sun <_@chengsun.uk>"]
edition = "2021"
readme = "README.md"
name = "stm32f7508-dk-julia"
version = "0.1.0"

[features]
strict_frame_timing = []

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
stm32f7 = { version = "0.13.0", features = ["stm32f750", "rt"] }
demos = { path = "../demos", features = ["real"] }

[[bin]]
name = "stm32f7508-dk-julia"
test = false
bench = false

[profile.dev]
opt-level = 1 # don't generate absolute garbage code

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
